# data_science_mlops_ifpe

./: .gitignore  README.md  pyproject.toml
tests/: test_sum.py
